--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
+    "@nestjs/common": "^8.1.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@types/cookie-session": "^2.0.43",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cookie-session": "^1.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
